--- a/AppScholl/templates/AppScholl/components/modalumno.html
+++ b/AppScholl/templates/AppScholl/components/modalumno.html
@@ -4,7 +4,7 @@
     <main class="conteiner-main" id="modcurso">
         <section class="conteiner-formulario">
             <div class="conteiner-titulo">
-                <h1>modificar Alumno</h1>
+                <h1>modificar Alumno DNI:{{alumno.documento}}</h1>
             </div>
             
             <form method="POST" class="formulario">
