--- a/AppScholl/templates/AppScholl/components/modcurso.html
+++ b/AppScholl/templates/AppScholl/components/modcurso.html
@@ -4,7 +4,7 @@
     <main class="conteiner-main" id="modcurso">
         <section class="conteiner-formulario">
             <div class="conteiner-titulo">
-                <h1>modificar curso</h1>
+                <h1>modificar curso:{{curso.nombre}}</h1>
             </div>
             
             <form method="POST" class="formulario">
