--- a/AppScholl/templates/AppScholl/carreras.html
+++ b/AppScholl/templates/AppScholl/carreras.html
@@ -15,7 +15,7 @@
                   <h2>Filtros</h2>
                   <button type="submit" name="filtro" value="data">Data</button>
                   <button type="submit" name="filtro" value="programacion">Programación</button>
-                  <button type="submit" name="filtro" value="diseno">Diseño</button>
+                  <button type="submit" name="filtro" value="diseño">Diseño</button>
                   <button type="submit" name="filtro" value="marketing">Marketing</button>
               </article>
               </form>
