--- a/AppScholl/static/AppScholl/sass/base/_reset.sass
+++ b/AppScholl/static/AppScholl/sass/base/_reset.sass
@@ -7,7 +7,7 @@ body
     display: grid
     grid-template-areas: "encabezado""main""pie"
     row-gap: 10px
-    background: red
+    background: #042940
     .conteiner-header
         grid-area: encabezado
         position: fixed
